bug: white-space: nowrap->pre to show new line in Firefox

--- a/src/pages/Home/components/IrEditor/IrEditor.module.scss
+++ b/src/pages/Home/components/IrEditor/IrEditor.module.scss
@@ -64,7 +64,7 @@
     border: 0;
     resize: none;
     outline: 0;
-    white-space: nowrap;
+    white-space: pre;
     overflow-y: hidden;
     background-color: transparent;
 }
