--- a/src/pages/Home/components/VmConsole/InputBlock/InputBlock.module.scss
+++ b/src/pages/Home/components/VmConsole/InputBlock/InputBlock.module.scss
@@ -11,7 +11,7 @@
 }
 
 .spanPrompt {
-    white-space: nowrap;
+    white-space: pre;
     color: var(--vm-console-prompt-color);
 }
 
